--- a/frontend/src/app/main/components/draw/draw.component.html
+++ b/frontend/src/app/main/components/draw/draw.component.html
@@ -1,6 +1,6 @@
 
 <nav>
-  <a [routerLink]="['/main']">
+  <a (click)="navigateToMain()" style="cursor: pointer;" title="Volver a la página principal">
     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(63, 96, 247, 1);transform: ;msFilter:;"><path d="m21.743 12.331-9-10c-.379-.422-1.107-.422-1.486 0l-9 10a.998.998 0 0 0-.17 1.076c.16.361.518.593.913.593h2v7a1 1 0 0 0 1 1h3a1 1 0 0 0 1-1v-4h4v4a1 1 0 0 0 1 1h3a1 1 0 0 0 1-1v-7h2a.998.998 0 0 0 .743-1.669z"></path></svg>
   </a>
   <label for="brushSize">Tamaño del pincel: </label>
@@ -83,6 +83,3 @@
     </div>
   </div>
 </div>
-
-
-
