--- a/frontend/src/app/main/components/main/main.component.html
+++ b/frontend/src/app/main/components/main/main.component.html
@@ -1,10 +1,14 @@
-<app-header></app-header>
+<div class="page-container">
 
-  <div>
-    
+  <app-header></app-header>
+  
+  <div class="content-wrap">
+      
     <router-outlet></router-outlet>
 
   </div>
 
-    <app-footer></app-footer>
+  <app-footer></app-footer>
+
+</div>
 
