Mejoras en tema del dibujado

--- a/frontend/src/app/main/components/draw-test/draw-test.component.html
+++ b/frontend/src/app/main/components/draw-test/draw-test.component.html
@@ -17,7 +17,6 @@
 <ng-template #end>
 
   <p-toast></p-toast>
-  <p-confirmdialog></p-confirmdialog>
   
   <!-- Botón para abrir el modal -->
   <p-button 
@@ -36,28 +35,47 @@
     [closable]="false" 
     [style]="{width: '400px'}">
     
-    <form>
-      <!-- Aquí irían tus campos de formulario si quieres agregar algo -->
+    <form [formGroup]="formPostArt" (ngSubmit)="saveDrawing()">
+      <div class="field">
+        <label for="title">Título</label>
+        <input id="title" type="text" pInputText formControlName="title" />
+      </div>
+    
+      <div class="field">
+        <label for="description">Descripción</label>
+        <textarea id="description" rows="3" pInputTextarea formControlName="description"></textarea>
+      </div>
+    
+      <div class="field">
+        <label for="category">Categoría</label>
+        <p-dropdown 
+          [options]="pixelArtService.listOfCategories" 
+          optionLabel="name" 
+          optionValue="id"
+          formControlName="category_id"
+          placeholder="Selecciona una categoría">
+        </p-dropdown>
+
+      </div>
+    
+      <div class="field">
+        <label for="tags">Etiquetas (separadas por coma)</label>
+        <input id="tags" type="text" pInputText formControlName="tags" />
+      </div>
+    
       <div class="flex justify-end gap-2 mt-4">
-        <p-button 
-          label="Cancelar" 
-          severity="secondary" 
-          (click)="displayModal = false">
-        </p-button>
-        
-        <p-button 
-          label="Guardar" 
-          (click)="confirmSave()">
-        </p-button>
+        <p-button label="Cancelar" severity="secondary" (click)="displayModal = false"></p-button>
+        <p-button label="Guardar" type="submit"></p-button>
       </div>
     </form>
+    
   
   </p-dialog>
 
 </ng-template>
 </p-toolbar>
 
-<p-splitter [style]="{ minHeight: '750px' , height: '100%' }" [panelSizes]="[30, 70]" [minSizes]="[20, 30]" styleClass="mb-8" layout="vertical">
+<p-splitter [style]="{ minHeight: '750px' , height: '100%' }" [panelSizes]="[30, 70]" [minSizes]="[20, 0]" styleClass="mb-8" layout="vertical">
   <ng-template #panel>
 
     <p-splitter [panelSizes]="[20, 40, 40]">
