--- a/frontend/src/app/main/components/main/gallery/gallery.component.html
+++ b/frontend/src/app/main/components/main/gallery/gallery.component.html
@@ -2,10 +2,11 @@
   <div class="contenido">
     <div class="ladoIzq">
       <h2 class="titulo">{{pixelArt.title}}</h2>
+      <h3> Creado por : {{pixelArt.userName}}</h3>
       <div class="cuerpo">
-        <p>{{pixelArt.description}}</p>
-
-        <h3> Creado por : {{pixelArt.userName}}</h3>
+        <h4>{{pixelArt.description}}</h4>
+        <p>Categoria : {{pixelArt.category}}</p>
+        <p>Etiquetas : {{pixelArt.tags}}</p>
       </div>
     </div>
     <div class="ladoDer">
